refactor: Move options menu to Fragment from host Activity

--- a/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <!-- Options menu option titles -->
     <string name="most_popular">Most Popular</string>
     <string name="highest_rated">Highest Rated</string>
+    <string name="favorites">Favorites</string>
 
     <!-- Sort-by options -->
     <string name="most_popular_desc">popular</string>
