--- a/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
 
     <!-- Network connection message -->
     <string name="network_connection_msg">Please check your network connection.</string>
+
+    <!-- Placeholder -->
+    <string name="placeholder">Empty</string>
 </resources>
