refactor: Remove unused and previously commented out code. Replace network connectivity Toast with Snackbar. Add Snackbar for add/remove Favorites. Add gold and black to colors.xml. Add and remove Strings to strings.xml. Change some UI elements from white to gold.

--- a/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
@@ -51,8 +51,10 @@
     <!-- Bundle keys -->
     <string name="fragment_key">fragment</string>
 
-    <!-- Toast messages -->
+    <!-- Snackbar messages -->
     <string name="network_disconnected">Check your network connection and retry.</string>
+    <string name="favorites_plus">Added to favorites</string>
+    <string name="favorites_minus">Removed from favorites</string>
 
     <!-- Error messages -->
     <string name="trailer_response_err">Problems retrieving Trailers</string>
