fix: Persist menu item selected through screen rotation. Add and change comments. Change variable names to match convention.

--- a/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
 
     <!-- Bundle keys -->
     <string name="fragment_key">fragment</string>
+    <string name="settings_option">settingsOption</string>
 
     <!-- Snackbar messages -->
     <string name="network_disconnected">Check your network connection and retry.</string>
