P4 refactor: Display 'Recipe Step Descriptions'.
Implement click listener on 'Recipe Step
... Descriptions'.

--- a/Baking/app/src/main/res/values/strings.xml
+++ b/Baking/app/src/main/res/values/strings.xml
@@ -45,4 +45,8 @@
 
 <resources>
     <string name="app_name">Baking</string>
+
+    <!-- Labels -->
+    <string name="ingredient_label">Ingredients: </string>
+    <string name="step_label">Steps: </string>
 </resources>
